Fix extra small vertical scrollbar

--- a/src/main/resources/META-INF/resources/webjars/home/project/project.css
+++ b/src/main/resources/META-INF/resources/webjars/home/project/project.css
@@ -24,7 +24,7 @@
 .qrcode-toggle {
 	float: right;
 	top: -28px;
-	right: -19px;
+	right: -16px;
 	position: relative;
 	z-index: 1;
 }
